--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  transition: .3s;
+  box-sizing: border-box;
+  font-family: "Noto Sans", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: Stanley;
+  src: url(./Fonts/Stanley.otf) format('opentype');
 }
+
+body {
+  width: 100%;
+  height: 100vh;
+  background: url(./images/dotted-grid.png);
+  background-size: cover;
+}
+
+
