--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
 body {
   width: 100%;
   height: 100vh;
+  /* background: #fff; */
   background: url(./images/dotted-grid.png);
   background-size: cover;
 }
